[package]
name = "project_euler_165"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = "0.4.1"
once_cell = "1.17.0"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "project_euler_165"
path = "src/main.rs"
